--- a/main/css/index.css
+++ b/main/css/index.css
@@ -19,10 +19,10 @@ body{
     /* position: fixed; */
     display: flex;
 }
-nav{
+.navbar{
     display: flex;
     align-items: center;
-    column-gap: 1rem;
+    column-gap: 2vw;
     padding: 5vw;
     /* margin-top: 20vw; */
     background-color: var(--white);
@@ -38,17 +38,111 @@ nav{
 }
 .search-result{
     position: absolute;
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
     padding: 0;
     margin: 0;
-    width: 102vw;
-    height: 50vh;
+    width: 100vw;
+    height: 47vh;
     top: -1vw;
     background-color: var(--white);
 }
+.populer-result{
+    margin-top: 35%;
+}
+.search-category-container{
+    position: relative;
+    height: 10vw;
+    display: flex;
+    overflow-x: scroll;
+    padding: 0 5% 0 5%;
+    column-gap: 2%;
+    margin-bottom: 5%;
+}
+.search-category{
+    border: 1px solid var(--primary-color);
+    padding: 5px 10px;
+    color: var(--primary-color);
+    border-radius: 100px;
+    max-width: max-content;
+    white-space: nowrap;
+    cursor: pointer;
+    height: 20px;
+}
+.result-text{
+    font-size: 1rem;
+    margin-left: 5%;
+}
+.result-study{
+    display: flex;
+    flex-direction: column;
+}
 .result-study-container{
-
+    display: flex;
+    overflow-x: scroll;
+    width: 100vw;
+    column-gap: 5%;
+}
+.result-study-box:first-child{
+    margin-left: 5%;
+}
+.result-study-box:last-child{
+    margin-right: 5%;
+}
+.result-study-box{
+    /* display: flex; */
+    flex-direction: column;
+    /* border: 1px solid var(--gray); */
+    cursor: pointer;
+}
+.result-study-img{
+    height: 20vw;
+    width: 41vw;
+    background-color: #29a03713;
+    border-radius: 10px 10px 0 0;
+}
+.result-study-info{
+    position: relative;
+    height: 13vw;
+    
+    width: 41vw;
+}
+.result-study-info::before{
+    content: "";
+    position: absolute;
+    inset: 0;
+    border-radius: 0 0 10px 10px;
+    border: 1px solid transparent;
+    background: linear-gradient(0deg,#aeaeae51 0%, white 100%) border-box; /*3*/
+    -webkit-mask:
+        linear-gradient(#fff 0 0) padding-box, 
+        linear-gradient(#fff 0 0);
+    -webkit-mask-composite: xor;
+          mask-composite: exclude;
+}
+.result-info-box{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+    margin: 1vw auto;
+}
+.result-study-name{
+    font-size: 1.1rem;
+    font-weight: bolder;
+}
+.result-study-category-container{
+    display: flex;
+    column-gap: 1vw;
+    font-size: 0.8rem;
+    width: 90%;
+    margin: 0 auto;
+}
+.result-study-category{
+    color: var(--gray-main);
+}
+.result-study-d-day{
+    color: var(--primary-color);
 }
 .bx-menu{
     font-size: 1.8rem;
@@ -109,6 +203,7 @@ nav{
     height: 120px;
     width: 78vw;
     opacity: 0.3;
+    cursor: pointer;
 }
 .user-study-info{
     display: flex;
@@ -235,6 +330,7 @@ nav{
     column-gap: 8px;
     padding: 0vw 9vw 0vw 6vw;
     overflow-x: scroll;
+    height: max-content;
 }
 .category-container{
     position: relative;
@@ -265,6 +361,8 @@ nav{
     border-radius: 100px;
     max-width: max-content;
     white-space: nowrap;
+    cursor: pointer;
+    height: 20px;
 }
 .study-container{
     display: flex;
@@ -276,6 +374,7 @@ nav{
     display: flex;
     flex-direction: column;
     /* border: 1px solid var(--gray); */
+    cursor: pointer;
 }
 .study-img{
     height: 20vw;
@@ -284,16 +383,6 @@ nav{
     border-radius: 10px 10px 0 0;
 }
 .study-info{
-    /* padding: 2vw;
-    display: flex;
-    flex-direction: column;
-    row-gap: 1vw;
-    background-color: #29A037;
-    border: 20px solid transparent;
-    border-radius: 10px;
-    border: 1px solid transparent;
-    border-image: linear-gradient(to top, #aeaeae51 0%, white 100%) 20 round;
-    border-image-slice: 1; */
     position: relative;
     height: 13vw;
 }
@@ -301,15 +390,14 @@ nav{
     content: "";
     position: absolute;
     inset: 0;
-    
-    border-radius: 0 0 10px 10px; /*1*/
-    border: 1px solid transparent; /*2*/
+    border-radius: 0 0 10px 10px;
+    border: 1px solid transparent;
     background: linear-gradient(0deg,#aeaeae51 0%, white 100%) border-box; /*3*/
     -webkit-mask:
         linear-gradient(#fff 0 0) padding-box, 
         linear-gradient(#fff 0 0);
     -webkit-mask-composite: xor;
-          mask-composite: exclude; /*5*/
+          mask-composite: exclude;
 }
 .info-box{
     display: flex;
@@ -337,4 +425,26 @@ nav{
 }
 .user-study-box.select-box{
     opacity: 1;
+}
+.plus{
+    display: flex;
+    margin: 2vw;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+.plus-text{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    white-space: nowrap;
+    color: var(--gray-main);
+}
+.bxs-chevron-down{
+    color: var(--gray-main);
+}
+hr{
+    width: 85%;
+    height: 0px;
+    color: var(--gray-main);
 }
