--- a/joinus/css/index.css
+++ b/joinus/css/index.css
@@ -68,14 +68,14 @@
     list-style-type: none;
 }
 
-#joinus-button {
+button {
     display: flex;
     margin-top: 70px;
     align-items: center;
     justify-content: center;
 }
 
-#joinus-button input {
+button {
     width: 154px;
     height: 33px;
     border: none;
