--- a/login/css/index.css
+++ b/login/css/index.css
@@ -67,19 +67,16 @@
     list-style-type: none;
 }
 
-#login-button {
+#loginBtn {
     display: flex;
-    margin-top: 70px;
     align-items: center;
     justify-content: center;
-}
-
-#login-button input {
     width: 154px;
     height: 33px;
     border: none;
     color: #fff;
     font-size: 16px;
+    margin-top: 70px;
     border-radius: 20px;
     background-color: #47BE55;
 }
